# rdkb-sso

./: CONTRIBUTING.md  configure.ac
files/: blmalmt.kad
include/: sso.h  sso_api.h
source/: Makefile.am  sso.c  sso_api.c
